map 3d position correction. Removed the zoom on the input fields on mobile devices

--- a/src/components/application/application.scss
+++ b/src/components/application/application.scss
@@ -161,8 +161,8 @@
         @include adaptive-value("padding-bottom", 45, 25, 1);
 
         @media (max-width: $s) {
-            padding-left: 1rem;
-            padding-right: 1rem;
+            // padding-left: 1rem;
+            // padding-right: 1rem;
         }
     }
 
